# opencv_ffmpeg

./: CMakeLists.txt  README.md
ffplayer/: CMakeLists.txt  main.cpp
opencv_ffmpeg/: CMakeLists.txt  cap_ffmpeg_impl.hpp  ffmpeg_codecs.hpp  opencv_ffmpeg.cpp
